@@ -1,3 +1,7 @@
+2005-08-31 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/canna_jrkanji.cpp: Fix indent.
+
 2005-08-30 Takuro Ashie <ashie@homa.ne.jp>
 
 	* configure.ac: Version-0.1.3.
